Convert form and route to using GET

--- a/app/templates/explore_compound.html
+++ b/app/templates/explore_compound.html
@@ -14,7 +14,7 @@
                             Try "Adefovir dipivoxil", "Atorvastatin", or "Amikacin" for compounds where DrugBank BA is False.<br/>
                             Try "Abacavir", "Tramadol", or "Sumatriptan" for compounds where DrugBank BA is True.
                             </p>
-                            <form action="/explore/compound" method="post">
+                            <form action="/explore/compound" method="get">
                                 <input class="form-control" type="text" name="compound_name" placeholder="Try Amikacin or Sumatriptan...">
                                 <input class="btn btn-primary mt-3" type="submit" value="Submit">
                             </form>
