--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -62,7 +62,7 @@
 
                         <div class="row mt-3">
                             <table class="table table-sm table-responsive w-auto" id="data-preview">
-                                <!-- explore.js generates table os sample data -->
+                                <!-- explore.js generates table of sample data -->
                             </table>
                         </div>
 
